使用Babel编译TypeScript代码，并使用ESlint做代码检查，集成VSCode环境配合Prettier做统一代码规范

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./build/",
+    "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
     "jsx": "react"
   },
-  "include": ["./client/**/*"]
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": ["node_modules"]
 }
