--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./build/",
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
@@ -8,7 +8,7 @@
     "jsx": "react"
   },
   "include": [
-    "./src/**/*"
+    "./client/**/*"
   ],
   "exclude": ["node_modules"]
 }
