--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
@@ -36,6 +37,7 @@
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
@@ -47,6 +49,7 @@
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
+    "antd": "^3.19.6",
     "http-proxy": "^1.17.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
